# snek

./: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
src/: constants.rs  lib.rs  snek.rs  util.rs
src/engine/: events.rs  geometry.rs  mod.rs  render.rs
src/snek/: .collision.rs.swp  .mod.rs.swp  collision.rs  entity.rs  game.rs  mod.rs  pill.rs
static/: index.html
