[package]
name = "snek" 
description = "a simple, well-known game" 
version = "0.1.0"
authors = ["Josh <josh@grayd.us>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
async-trait = "0.1.74"
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
js-sys = "0.3.64"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "KeyboardEvent",
  "Performance",
  "PointerEvent",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

